--- a/public/assets/css/now-ui-dashboard.css
+++ b/public/assets/css/now-ui-dashboard.css
@@ -5953,3 +5953,16 @@ Created using IcoMoon - icomoon.io
 .btn.btn-dribbble.btn-neutral:active {
     color: #ed679b !important;
 }
+
+.image-preview
+{
+    max-height: 500px;
+    transition: 0.3s all ease-in-out;
+}
+
+.hidden
+{
+    opacity: 0;
+    visibility: hidden;
+    max-height: 0;
+}
