--- a/public/assets/css/now-ui-dashboard.css
+++ b/public/assets/css/now-ui-dashboard.css
@@ -5954,10 +5954,17 @@ Created using IcoMoon - icomoon.io
     color: #ed679b !important;
 }
 
+.transition-03
+{
+    transition: 0.3s all ease-in-out;
+}
+.transform-origin-center
+{
+    transform-origin: center;
+}
 .image-preview
 {
     max-height: 500px;
-    transition: 0.3s all ease-in-out;
 }
 
 .hidden
